[package]
name = "rust-node-noise"
version = "0.1.0"
authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snow = { git = "https://github.com/Frando/snow.git", branch = "xchachapoly" }
async-std = "1.4.0"
# snow = { path = "../snow" }
